# negativeHarmonizer

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/: generateNegatives.py  notebook.ipynb
src/negativeHarmonizer/: __init__.py  converter.py  pitch.py
src/negatives/: NEGATIVE_CHOPIN2.mid
