[metadata]
name = negativeHarmonizer-FinchMF
version = 0.0.2
author = Matthew Finch
author_email = finchrmatthew@gmail.com
description = simple application to convert midi harmonies into their negative counter parts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FinchMF/negativeHarmonizer
project_urls =
    Bug Tracker = https://github.com/FinchMF/negativeHarmonizer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src